--- a/views/pd/centerInfo/centerEdit.ejs
+++ b/views/pd/centerInfo/centerEdit.ejs
@@ -30,6 +30,12 @@
                                             <input type="text" class="form-control" name="center" placeholder="" value="<%= records.center %>">
                                         </div>
                                     </div>
+                                    <div class="form-group">
+                                        <label for="serialNum" class="col-md-3 control-label">সেন্টারের সিরিয়াল নং</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="serialNum" placeholder="" value="<%= records.serialNum %>">
+                                        </div>
+                                    </div>
                                     
                                     <div class="form-group">
                                         <label for="kormokorta" class="col-md-3 control-label">কর্মকর্তার নাম</label>
