--- a/views/pd/centerInfo/pdf.ejs
+++ b/views/pd/centerInfo/pdf.ejs
@@ -35,6 +35,7 @@
             <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
             <thead>
             <tr>
+                <!-- <th>ক্রমিক নং</th> -->
                 <th>সেন্টারের নাম</th>
                 <th>কর্মকর্তার নাম</th>
                 <th>পদবী</th>
@@ -43,7 +44,7 @@
             </tr>
             </thead>
             <tbody>
-                <% records.forEach(function(row){ %>
+                <% records.forEach(function(row,index){ %>
                     <tr>
                         <td><%= row.center %></td>
                         <td><%= row.kormokorta %></td>
