--- a/views/pd/worker/workerInfo/pdfAll.ejs
+++ b/views/pd/worker/workerInfo/pdfAll.ejs
@@ -51,7 +51,7 @@
           <div>
             <h1>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h1>
             <h2>কৃষি সম্প্রসারণ অধিদপ্তর</h2>
-            <h3>উপপরিচালকের কার্যালয়</h3>
+            <h3>হর্টিকালচার উইং</h3>
             <h2>শ্রমিকের তথ্য</h2>
           </div>
           <img
@@ -60,7 +60,7 @@
             width="80px"
           />
         </div>
-        <p><b>সেন্টার :</b>সকল সেন্টারের তথ্য</p>
+        <!-- <p><b>সেন্টার :</b>সকল সেন্টারের তথ্য</p> -->
         <div
           style="
             display: flex;
