--- a/views/pd/worker/workerInfo/pdfAll.ejs
+++ b/views/pd/worker/workerInfo/pdfAll.ejs
@@ -120,7 +120,7 @@
             workerinfos.forEach(function(row){ %> <% if (center.id ===
             row.center_id){%> <% if (indexes === 0){%>
             <tr>
-              <td rowspan="<%=centerIndex%>"><%=index+1%></td>
+              <td rowspan="<%=centerIndex%>"><%=index%></td>
               <td rowspan="<%=centerIndex%>"><%=center.center %></td>
               <td><%= row.podobi %></td>
               <td><%= row.name %></td>
