--- a/views/pd/topSheet/pdf.ejs
+++ b/views/pd/topSheet/pdf.ejs
@@ -1,64 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News PDF</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>মাসিক টপশীট (উৎপাদন)</title>
 
     <style>
-        .flex-container {
-            display: flex;
+      .flex-container {
+        display: flex;
 
-            justify-content: center
-        }
-        .table, td, th {
-            border: 1px solid black;
-        }
-        .table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        .center {
-            text-align: center;
-        }
-        .inline-block-child {
-            display: inline-block;
-        }
-        .header{
-            display: flex;
-            width: 100%;
-        }
-        .header > * {
-            width: 33%;
-        }
-        .row{
-            display: flex;
-            width: 100%;
-        }
-        .row > * {
-            width: 50%;
-        }
+        justify-content: center;
+      }
+      .table,
+      td,
+      th {
+        border: 1px solid black;
+      }
+      .table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      .center {
+        text-align: center;
+      }
+      .inline-block-child {
+        display: inline-block;
+      }
     </style>
-</head>
-<body>
-
-<div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
-    <div>
-        <div class="header">
-            <div>
-                <img src="/images/dae.jpg" width="100" alt="dae">
-            </div>
-            <div>
-                <h3>হর্টিকালচার উইং</h3>
-            </div>
-            <div>
-                <img src="/images/bd.png" width="100" alt="bd">
-            </div>
+  </head>
+  <body>
+    <div
+      style="
+        margin-top: 5px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        background-color: #ffffffa6;
+      "
+      class="center"
+    >
+      <div>
+        <div
+          style="
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+          "
+        >
+          <div
+            style="height: 80px; width: 80px; max-height: 80px; max-width: 80px"
+          >
+            <img
+              src="/landingPage/images/daelogo.png"
+              alt="DAE"
+              style="height: 100%; width: 100%; object-fit: contain"
+            />
+          </div>
+          <div>
+            <h1>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h1>
+            <h2>কৃষি সম্প্রসারণ অধিদপ্তর</h2>
+            <h3>উপপরিচালকের কার্যালয়</h3>
+            <h3>খামারবাড়ী ঢাকা-১২১৫</h3>
+            <h2>মাসিক টপশীট (উৎপাদন)</h2>
+          </div>
+          <div
+            style="height: 80px; width: 80px; max-height: 80px; max-width: 80px"
+          >
+            <img
+              src="/landingPage/images/mujib.png"
+              alt="Homepage"
+              style="height: 100%; width: 100%; object-fit: contain"
+            />
+          </div>
         </div>
-        <h1>মাসিক টপশীট (উৎপাদন)</h1>
-        <div class="row">
-            <div><p><b>সেন্টারের নাম :</b><%= centerName %></p></div>
-            <div><p><b>প্রতিবেদনের তারিখ : </b><%= moment(selectedDate).locale("bn").format("MM/YYYY") %></p></div>
+        <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
+        <div
+          style="
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+          "
+        >
+          <p>স্মারক নংঃ</p>
+          <p>তারিখঃ <%= new Date().toLocaleDateString();%></p>
         </div>
         <%if (records.length >0){ %>
             <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
@@ -141,7 +166,6 @@
                     <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
                     <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
                     <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
-                    <th>পরিবর্তন/মুছুন</th>
                 </tr>
                 </thead>
                 <tbody>
