--- a/views/index.ejs
+++ b/views/index.ejs
@@ -145,7 +145,7 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h5 class="subhead subhead--dark">হর্টিকালচার সেন্টার সমূহের</h5>
+                <h5 class="h2">হর্টিকালচার সেন্টার সমূহের</h5>
                     <br>
                 <h1 class="display-1 display-1--light">চারা / কলমের মজুদ  তালিকা </h1>
             </div>
@@ -226,7 +226,7 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">হর্টিকালচার উইং এর প্রধান দায়িত্ব</h3>
+                <h2 class="h2">হর্টিকালচার উইং এর প্রধান দায়িত্ব</h3>
             </div>
         </div> <!-- end section-header -->
 
@@ -369,9 +369,10 @@
                     <div class="cinfo">
                         <h5>ঠিকানা</h5>
                         <p>
-                            খামারবাড়ি রোড,<br>
-                            খামারবাড়ি, ঢাকা<br>
-                            ঢাকা ১২১৫
+                            পরিচালক <br>
+                            কক্ষ নং-১৩৯<br>
+                            মধ‍্য বিল্ডিং -২য় তলা<br>
+                            কৃষি সম্প্রসারণ অধিদপ্তর, খামারবাড়ি, ঢাকা-১২১৫
                         </p>
                     </div>
 
@@ -385,8 +386,8 @@
                     <div class="cinfo">
                         <h5>ফোন/মোবাইল</h5>
                         <p>
-                            ফোন: <br>
-                            মোবাইল:<br>
+                            ফোন: ০২-৫৫০২৮৩৬৪
+
                         </p>
                     </div>
 
