--- a/views/charaKolomFixed.ejs
+++ b/views/charaKolomFixed.ejs
@@ -90,7 +90,7 @@
           
             <div class="row home-content__main">
 
-                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;" class="text-center">১. হর্টিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h1>
+                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;     font-size: 40px;" class="text-center">১. হর্টিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h1>
             
             <div class="table-responsive" id="output">
                 <%if (record1.length >0){ %>
@@ -162,7 +162,7 @@
           
             <div class="row home-content__main">
 
-                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;" class="text-center">২. হর্টিকালচার সেন্টারের ফল/মসলা ও শাক-সবজি বিক্রয় মূল্য</h1>
+                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;     font-size: 40px;" class="text-center">২. হর্টিকালচার সেন্টারের ফল/মসলা ও শাক-সবজি বিক্রয় মূল্য</h1>
             
             <div class="table-responsive" id="output">
                 <%if (record2.length >0){ %>
@@ -234,7 +234,7 @@
           
             <div class="row home-content__main">
 
-                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;" class="text-center">৩. শীতকালীন সবজি ও অন্যান্য বীজের/চারার বিক্রয় মূল্য</h1>
+                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;     font-size: 40px;"  class="text-center">৩. শীতকালীন সবজি ও অন্যান্য বীজের/চারার বিক্রয় মূল্য</h1>
             
             <div class="table-responsive" id="output">
                 <%if (record3.length >0){ %>
@@ -310,7 +310,7 @@
           
             <div class="row home-content__main">
 
-                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;" class="text-center">৪. গ্রীষ্মকালীন সবজি ও অন্যান্য বীজের/চারার বিক্রয় মূল্য</h1>
+                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;     font-size: 40px;" class="text-center">৪. গ্রীষ্মকালীন সবজি ও অন্যান্য বীজের/চারার বিক্রয় মূল্য</h1>
             
             <div class="table-responsive" id="output">
                 <%if (record4.length >0){ %>
@@ -385,7 +385,7 @@
           
             <div class="row home-content__main">
 
-                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;" class="text-center">৫. বিভিন্ন ফুল ও সুদৃশ্য গাছের চারা/কলমের বিক্রয় মূল্য</h1>
+                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;     font-size: 40px;" class="text-center">৫. বিভিন্ন ফুল ও সুদৃশ্য গাছের চারা/কলমের বিক্রয় মূল্য</h1>
             
             <div class="table-responsive" id="output">
                 <%if (record5.length >0){ %>
@@ -457,7 +457,7 @@
           
             <div class="row home-content__main">
 
-                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;" class="text-center">৬. মৌসুমী ফুল ও চারার বিক্রয় মূল্য</h1>
+                <h1 style="color: #070707; text-decoration: underline; font-weight: bold;     font-size: 40px;" class="text-center">৬. মৌসুমী ফুল ও চারার বিক্রয় মূল্য</h1>
             
             <div class="table-responsive" id="output">
                 <%if (record6.length >0){ %>
