--- a/views/center/centerInfo/centerEdit.ejs
+++ b/views/center/centerInfo/centerEdit.ejs
@@ -26,28 +26,28 @@
                                     <div class="form-group">
                                         <label for="kormokorta" class="col-md-3 control-label">কর্মকর্তার নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="kormokorta" placeholder="<%= records.kormokorta %>">
+                                            <input type="text" class="form-control" name="kormokorta" value="<%= records.kormokorta %>">
                                         </div>
                                     </div> 
 
                                     <div class="form-group">
                                         <label for="podobi" class="col-md-3 control-label">পদবী</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="podobi" placeholder="<%= records.podobi %>">
+                                            <input type="text" class="form-control" name="podobi" value="<%= records.podobi %>">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
                                         <label for="mobile" class="col-md-3 control-label">মোবাইল নং</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="mobile" placeholder="<%= records.mobile %>">
+                                            <input type="text" class="form-control" name="mobile" value="<%= records.mobile %>">
                                         </div>
                                     </div> 
 
                                     <div class="form-group">
                                         <label for="email" class="col-md-3 control-label">ই-মেইল</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="email" placeholder="<%= records.email %>">
+                                            <input type="text" class="form-control" name="email" value="<%= records.email %>">
                                         </div>
                                     </div>
                                     
