--- a/views/pd/charaKolomPrice/winterVeg/pdf.ejs
+++ b/views/pd/charaKolomPrice/winterVeg/pdf.ejs
@@ -59,8 +59,9 @@
           <div>
             <h1>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h1>
             <h2>কৃষি সম্প্রসারণ অধিদপ্তর</h2>
-            <h3>উপপরিচালকের কার্যালয়</h3>
-            <h3>খামারবাড়ী ঢাকা-১২১৫</h3>
+            <h3>হর্টিকালচার উইং</h3>
+            <h3>খামারবাড়ী, ফার্মগেট, ঢাকা-১২১৫</h3>
+            <h3>www.dae.gov.bd</h3>
             <h2>শীতকালীন সবজি ও অন্যান্য বীজের/চারার বিক্রয় মূল্য</h2>
           </div>
           <div
