--- a/views/center/employee/chak1/employeeChak1.ejs
+++ b/views/center/employee/chak1/employeeChak1.ejs
@@ -57,7 +57,7 @@
                         
                         <div class="row mb-2">
                             <div class="col-md-12">
-                                <a href="/center/chak1Form" class="btn btn-success btn-group-sm ">ক্যাডার/নন ক্যাডার কর্মকর্তাদের নাম ও পদবী সহ শূন্য পদের তথ্য ফর্ম</a>
+                                <a href="/center/chak1Form" class="btn btn-success btn-group-sm ">ক্যাডার/নন ক্যাডার কর্মকতা/কর্মচারীদের নাম ও পদবী সহ শূন্য পদের তথ্য ফর্ম</a>
                             </div>
 
                         </div>
