--- a/views/center/employee/chak1/employeeChak1Form.ejs
+++ b/views/center/employee/chak1/employeeChak1Form.ejs
@@ -61,12 +61,22 @@
                                         </div>
                                     </div>
 
+                                  
+
                                     <div class="form-group">
-                                        <label for="podobi" class="col-md-3 control-label">পদবী</label>
+                                        <label for="name" class="col-md-3 control-label">পদবী</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="podobi" placeholder="পদবী">
+                                            <select name="name" id="name" class="form-control">
+                                                <option value="">পদের নাম</option>
+                                                <% podobiLists.forEach(function(row){ %>
+                                                    <% if (row.podobi != null) {%>
+                                                        <option value=<%= row.podobi %>><%= row.podobi %></option>
+                                                    <% } %>
+                                                <% }) %>
+                                            </select>
                                         </div>
                                     </div>
+
                                     <div class="form-group">
                                         <label for="birthDate" class="col-md-3 control-label">জন্ম তারিখ</label>
                                         <div class="col-md-9">
