--- a/views/index.ejs
+++ b/views/index.ejs
@@ -367,7 +367,7 @@
                         </a>
                     </p>
                     <div class="cinfo">
-                        <h5>ঠিকানা</h5>
+                        <h5>যোগাযোগ</h5>
                         <p>
                             পরিচালক <br>
                             কক্ষ নং-১৩৯<br>
@@ -379,7 +379,7 @@
                     <div class="cinfo">
                         <h5>ই-মেইল</h5>
                         <p>
-                            contact@hortiulturewingbd.com<br>
+                            dhw@dae.gov.bd<br>
                         </p>
                     </div>
 
