--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -1,7 +1,7 @@
 <div class="app-sidebar colored">
     <div class="sidebar-header">
         <a class="header-brand" href="#">
-            <% console.log("sidebar", locals.type) %> 
+            <% console.log("sidebar", locals) %> 
             <span class="text"> Admin </span>
         </a>
        
