--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -2,7 +2,7 @@
     <div class="sidebar-header">
         <a class="header-brand" href="#">
             <% console.log("sidebar", locals.type) %> 
-            <span class="text"> Admin </span>
+            <span class="text"> <% locals.type === "center" ? "" : "Horticulture Wing Bd" %> </span>
         </a>
        
       </div>
