session console logging

--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -3,7 +3,7 @@
     <a class="header-brand" href="#">
       <!-- <% console.log("sidebar", locals.type) %> -->
 
-      <span class="text"> <% locals.user_name %> </span>
+      <span class="text"> <%= locals.user_name %> </span>
     </a>
 
   </div>
