--- a/views/pd/worker/workerInfo/workerInfo.ejs
+++ b/views/pd/worker/workerInfo/workerInfo.ejs
@@ -1,31 +1,31 @@
 <%- include('../../../includes/header')-%>
-        <div id="wrapper" class="wrapper" >
-            <%- include('../../../includes/topbar')-%>
-            <div class="page-wrap">
-                <%- include('../../../includes/sidebar')-%>
-                <div class="main-content">
-                    <div class="container-fluid">
-                        <div class="row clearfix">
-                            <div class="col-md-10">
-                                <h1 class="text-center"><%= title %></h1>
-                            </div>
-                        </div>
+<div id="wrapper" class="wrapper">
+  <%- include('../../../includes/topbar')-%>
+  <div class="page-wrap">
+    <%- include('../../../includes/sidebar')-%>
+    <div class="main-content">
+      <div class="container-fluid">
+        <div class="row clearfix">
+          <div class="col-md-10">
+            <h1 class="text-center"><%= title %></h1>
+          </div>
+        </div>
 
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="row clearfix">
-                                    <div class="col-md-3">
-                                        <select id="center" class="form-control" name="center" required>
-                                            <option value="">সেন্টার বাছুন</option>
-                                            <option value="all">সকল সেন্টারের তথ্য</option>
-                                            <% if (centers.length >0){ %>
-                                                <% centers.forEach(function (center) { %>
-                                                    <option value="<%= center.id %>"><%= center.center %></option>
-                                                <% }) %>
-                                            <% } %>
-                                        </select>
-                                    </div>
-                                    <!-- <div class="col-md-3">
+        <div class="card">
+          <div class="card-body">
+            <div class="row clearfix">
+              <div class="col-md-3">
+                <select id="center" class="form-control" name="center" required>
+                  <option value="">সেন্টার বাছুন</option>
+                  <option value="all">সকল সেন্টারের তথ্য</option>
+                  <% if (centers.length >0){ %>
+                  <% centers.forEach(function (center) { %>
+                  <option value="<%= center.id %>"><%= center.center %></option>
+                  <% }) %>
+                  <% } %>
+                </select>
+              </div>
+              <!-- <div class="col-md-3">
                                         <select id="month" class="form-control" name="month">
                                             <option value="january">জানুয়ারি</option>
                                             <option value="february">ফেব্রুয়ারি</option>
@@ -52,164 +52,188 @@
                                             <option value="2023">২০২৩-২৪</option>
                                         </select>
                                     </div> -->
-                                    <!-- <div class="col-md-3">
+              <!-- <div class="col-md-3">
                                         <div>
                                         <input type="submit" id="submit" name="submit" value="submit" class="btn btn-primary">   
                                         </div>
                                     </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="row mb-2">
+            </div>
+          </div>
+        </div>
+        <!-- <div class="row mb-2">
                             <div class="col-md-12">
                                 <a href="/center/apaForm" class="btn btn-success btn-group-sm ">এপিএ ফর্ম</a>
                             </div>
 
                         </div> -->
 
-                        <div class="table-responsive" id="output">
-                        </div>
-
-
-                        <button onclick="exportToPdf()" class="btn btn-success">
-                            Download PDF
-                        </button>
-                        <button onclick="exportToExcel('tblexportData', 'নিয়মিত শ্রমিকদের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
-
-
-                        <div id="output"></div>
-        <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
-                    </div>
-                </div>
-            </div>
+        <div class="table-responsive" id="output">
         </div>
 
 
-   
+        <button onclick="exportToPdf()" class="btn btn-success">
+          Download PDF
+        </button>
+        <button onclick="exportToExcel('tblexportData', 'নিয়মিত শ্রমিকদের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
+
+
+        <div id="output"></div>
+        <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <%- include('../../../includes/footer')-%>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
+
 <script>
-    async function exportToPdf() {
-        var center = $('#center').val();
-        const { data } = await axios.post(`/pd/generatePdfworkerInfo`,{center:center});
-        var mywindow = window.open("", "PRINT", "height=400,width=600");
-        mywindow.document.write(data.html);
-        mywindow.document.close(); // necessary for IE >= 10
-        mywindow.focus(); // necessary for IE >= 10*/
-        mywindow.print();
-        return true;
-    }
+  async function exportToPdf() {
+    var center = $('#center').val();
+    const {
+      data
+    } = await axios.post(`/pd/generatePdfworkerInfo`, {
+      center: center
+    });
+    var mywindow = window.open("", "PRINT", "height=400,width=600");
+    mywindow.document.write(data.html);
+    mywindow.document.close(); // necessary for IE >= 10
+    mywindow.focus(); // necessary for IE >= 10*/
+    mywindow.print();
+    return true;
+  }
 </script>
 <script type="text/javascript">
-    function exportToExcel(tableID, filename = ''){
-        var downloadurl;
-        var dataFileType = 'application/vnd.ms-excel';
-        var tableSelect = document.getElementById(tableID);
-        var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
-        
-        // Specify file name
-        filename = filename?filename+'.xls':'export_excel_data.xls';
-        
-        // Create download link element
-        downloadurl = document.createElement("a");
-        
-        document.body.appendChild(downloadurl);
-        
-        if(navigator.msSaveOrOpenBlob){
-            var blob = new Blob(['\ufeff', tableHTMLData], {
-                type: dataFileType
-            });
-            navigator.msSaveOrOpenBlob( blob, filename);
-        }else{
-            // Create a link to the file
-            downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
-        
-            // Setting the file name
-            downloadurl.download = filename;
-            
-            //triggering the function
-            downloadurl.click();
-        }
-    }
-     
-    </script>
-<script>
-                
-    $(document).ready(function(){
-        
-      $('.dropdown a.test').on("click", function(e){
-        $(this).next('ul').toggle();
-        e.stopPropagation();
-        e.preventDefault();
+  function exportToExcel(tableID, filename = '') {
+    try {
+      console.log(tableID)
+      var elt = document.getElementById(tableID);
+      var wb = XLSX.utils.table_to_book(elt, {
+        sheet: "sheet1"
       });
+      // return dl ?
+      //   XLSX.write(wb, {
+      //     bookType: 'xlsx',
+      //     bookSST: true,
+      //     type: 'base64'
+      //   })
+      // : 
+      XLSX.writeFile(wb, filename || ('MySheetName.' + 'xlsx'));
+    } catch (error) {
+      console.log(error)
+    }
+
+  }
+
+  //   function exportToExcel(tableID, filename = 'export_excel_data') {
+  //     var downloadurl;
+  //     console.log(tableSelect)
+  //     var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
+
+  //     // Specify file name
+  //     filename = filename ? filename + '.xls' : 'export_excel_data.xls';
+
+  //     // Create download link element
+  //     downloadurl = document.createElement("a");
+
+  //     document.body.appendChild(downloadurl);
+
+  //     if (navigator.msSaveOrOpenBlob) {
+  //       var blob = new Blob(['\ufeff', tableHTMLData], {
+  //         type: dataFileType
+  //       });
+  //       navigator.msSaveOrOpenBlob(blob, filename);
+  //     } else {
+  //       // Create a link to the file
+  //       downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
+
+  //       // Setting the file name
+  //       downloadurl.download = filename;
+
+  //       //triggering the function
+  //       downloadurl.click();
+  //     }
+  //   }
+</script>
+<script>
+  $(document).ready(function() {
+
+    $('.dropdown a.test').on("click", function(e) {
+      $(this).next('ul').toggle();
+      e.stopPropagation();
+      e.preventDefault();
     });
+  });
 </script>
 
 <script type="text/javascript">
-   
-    $("body").on("click", "#btnExport", function () {
-        html2canvas($('#tblCustomers')[0], {
-            onrendered: function (canvas) {
-                var data = canvas.toDataURL();
-                var docDefinition = {
-                    content: [{
-                        image: data,
-                        width: 650
-                    }]
-                };
-                pdfMake.createPdf(docDefinition).download("farmer-details.pdf");
-            }
-        });
+  $("body").on("click", "#btnExport", function() {
+    html2canvas($('#tblCustomers')[0], {
+      onrendered: function(canvas) {
+        var data = canvas.toDataURL();
+        var docDefinition = {
+          content: [{
+            image: data,
+            width: 650
+          }]
+        };
+        pdfMake.createPdf(docDefinition).download("farmer-details.pdf");
+      }
     });
+  });
 
-    $( "#content-wrapper" ).load( "no url rn",function() {
-        var center = $('#center').val();
-        $.ajax({
-            type: "POST",
-            url: "/pd/workerInfoFilter",
-            data: {center:center},
-            datatype: "json",
-            beforeSend: function() {
-                // setting a timeout
-                $('#loading').show();
-                $('#output').hide();
+  $("#content-wrapper").load("no url rn", function() {
+    var center = $('#center').val();
+    $.ajax({
+      type: "POST",
+      url: "/pd/workerInfoFilter",
+      data: {
+        center: center
+      },
+      datatype: "json",
+      beforeSend: function() {
+        // setting a timeout
+        $('#loading').show();
+        $('#output').hide();
 
-            },
-            success: function (data) {
-                $('#output').html(data);
-                $('#tblCustomers').DataTable();
-            },
-            complete: function() {
-                $('#loading').hide();
-                $('#output').show();
-            }
-        });
+      },
+      success: function(data) {
+        $('#output').html(data);
+        $('#tblCustomers').DataTable();
+      },
+      complete: function() {
+        $('#loading').hide();
+        $('#output').show();
+      }
     });
+  });
 
 
-    $('#center').on("change ",function () {
-        var center = $('#center').val();
-        $.ajax({
-            type: "POST",
-            url: "/pd/workerInfoFilter",
-            data: {center:center},
-            datatype: "json",
-            beforeSend: function() {
-                // setting a timeout
-                $('#loading').show();
-                $('#output').hide();
-            },
-            success: function (data) {
-                $('#output').html(data);
-                $('#tblCustomers').DataTable();
-            },
-            complete: function() {
-                $('#loading').hide();
-                $('#output').show();
-            }
-        });
+  $('#center').on("change ", function() {
+    var center = $('#center').val();
+    $.ajax({
+      type: "POST",
+      url: "/pd/workerInfoFilter",
+      data: {
+        center: center
+      },
+      datatype: "json",
+      beforeSend: function() {
+        // setting a timeout
+        $('#loading').show();
+        $('#output').hide();
+      },
+      success: function(data) {
+        $('#output').html(data);
+        $('#tblCustomers').DataTable();
+      },
+      complete: function() {
+        $('#loading').hide();
+        $('#output').show();
+      }
     });
-
-    
-
+  });
 </script>
